# Board-Games-Guru

./: .gitignore  README.md  chat_engine.py  ingestor.py  main.py  metadata_worker.py  prompts.py  pyproject.toml  settings.py  utils.py
orig_data/: 108_fool.docx
storage/chroma/: chroma.sqlite3
