[project]
name = "board-games-guru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.20",
    "docling>=2.49.0",
    "dotenv>=0.9.9",
    "llama-index>=0.13.4",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-node-parser-docling>=0.4.0",
    "llama-index-readers-docling>=0.4.0",
    "llama-index-vector-stores-chroma>=0.5.2",
    "streamlit>=1.49.1",
]
