[project]
name = "board-games-guru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.8.0+cu126",
    "torchvision==0.23.0+cu126",
    "chromadb>=1.0.20",
    "docling>=2.49.0",
    "dotenv>=0.9.9",
    "llama-index>=0.13.4",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-node-parser-docling>=0.4.0",
    "llama-index-readers-docling>=0.4.0",
    "llama-index-vector-stores-chroma>=0.5.2",
    "pymupdf>=1.26.4",
    "streamlit>=1.49.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"